Refactor bot integration service